--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -17,5 +17,6 @@
   "getYourMobiVehicle": "Receive Your Mobi Vehicle",
   "youWillGetMopedIn24hrs": "Your moped will arrive at your doorstep within 24 hours of purchase confirmation.",
   "enjoyYourMobiVehicle": "Enjoy Your Mobi Vehicle",
-  "getSince800Dollars": "Earn from $800 per month by making deliveries on your moped, or simply enjoy your vehicle for convenient city transportation."
+  "getSince800Dollars": "Earn from $800 per month by making deliveries on your moped, or simply enjoy your vehicle for convenient city transportation.",
+  "test": "english"
 }
