--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -18,5 +18,7 @@
   "youWillGetMopedIn24hrs": "Tu moped llegara a tu domicilio en tan solo 24 Hrs. a partir de la confirmación de tu compra.",
   "enjoyYourMobiVehicle": "Disfruta de tu vehículo mobi",
   "getSince800Dollars": "Recibe desde 800 US$ mensuales realizando envíos en tu moped, o simplemente disfruta de tu vehículo para moverte libremente por la ciudad.",
-  "test": "español"
+  "test": "español",
+  "support": "Soporte",
+  "no": "No"
 }
