[FEATURE] howItWork text

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -20,5 +20,6 @@
   "getSince800Dollars": "Earn from $800 per month by making deliveries on your moped, or simply enjoy your vehicle for convenient city transportation.",
   "test": "english",
   "support": "Support",
-  "no": "No"
+  "no": "No",
+  "howItWorks": "How it works?",
 }
