--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -20,5 +20,6 @@
   "getSince800Dollars": "Recibe desde 800 US$ mensuales realizando envíos en tu moped, o simplemente disfruta de tu vehículo para moverte libremente por la ciudad.",
   "test": "español",
   "support": "Soporte",
-  "no": "No"
+  "no": "No",
+  "howItWorks": "¿Cómo funciona?",
 }
