--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -21,5 +21,5 @@
   "test": "english",
   "support": "Support",
   "no": "No",
-  "howItWorks": "How it works?",
+  "howItWorks": "How it works?"
 }
