--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -21,5 +21,5 @@
   "test": "español",
   "support": "Soporte",
   "no": "No",
-  "howItWorks": "¿Cómo funciona?",
+  "howItWorks": "¿Cómo funciona?"
 }
