--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -27,7 +27,7 @@
   "email": "Email",
   "phone": "Phone number",
   "acceptClause": "I agree to the Terms, Conditions and Privacy Policy.",
-  "sendEmail": "I would like to receive exclusive emails with discounts and news.",
+  "acceptEmailSend": "I would like to receive exclusive emails with discounts and news.",
   "registerWith": "Register with:",
   "verificationCode": "Verify your code",
   "checkWhatsapp": "Check your whatsapp and paste the code",
