--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -34,5 +34,5 @@
   "sendCodeAgain": "Resend the verification code",
   "verify": "Verify",
   "codeSuccess": "Success code",
-  "welcomeToMOBI": "Welcome to MOBI"
+  "welcomeToMOBI": "WELCOME TO MOBI"
 }
