--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -35,5 +35,5 @@
   "register": "Registrar",
   "verify": "Verificar",
   "codeSuccess": "Código exitoso",
-  "welcomeToMOBI": "Bienvenido a MOBI"
+  "welcomeToMOBI": "BIENVENIDO A MOBI"
 }
