--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -35,5 +35,6 @@
   "verify": "Verify",
   "codeSuccess": "Success code",
   "welcomeToMOBI": "WELCOME TO MOBI",
-  "codeSent": "Code sent"
+  "codeSent": "Code sent",
+  "thisFieldIsMandatory": "This field is mandatory"
 }
