--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -37,8 +37,7 @@
   "codeSuccess": "Código exitoso",
   "welcomeToMOBI": "BIENVENIDO A MOBI",
   "codeSent": "Código Enviado",
-  "thisFieldIsMandatory": "Este campo es obligatorio"
-  "howItWorks": "¿Cómo funciona?",
+  "thisFieldIsMandatory": "Este campo es obligatorio",
   "selectMobi": "SELECCIONA TU MOBI",
   "selectSubscription": "SELECCIONA TU SUSCRIPCIÓN",
   "includes": "Incluye"
