--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -36,8 +36,7 @@
   "codeSuccess": "Success code",
   "welcomeToMOBI": "WELCOME TO MOBI",
   "codeSent": "Code sent",
-  "thisFieldIsMandatory": "This field is mandatory"
-  "howItWorks": "How it works?",
+  "thisFieldIsMandatory": "This field is mandatory",
   "selectMobi": "CHOOSE YOU MOBI",
   "selectSubscription": "SELECCIONA TU SUSCRIPCIÓN",
   "include": "Includes"
