--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -38,7 +38,7 @@
   "codeSent": "Code sent",
   "thisFieldIsMandatory": "This field is mandatory",
   "selectMobi": "CHOOSE YOU MOBI",
-  "selectSubscription": "SELECCIONA TU SUSCRIPCIÓN",
+  "selectSubscription": "CHOOSE YOUR SUBSCRIPTION",
   "include": "Includes"
 
 }
