--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -39,6 +39,7 @@
   "thisFieldIsMandatory": "This field is mandatory",
   "selectMobi": "CHOOSE YOU MOBI",
   "selectSubscription": "CHOOSE YOUR SUBSCRIPTION",
-  "include": "Includes"
+  "include": "Includes",
+  "jobMarketplace": "Job Marketplace"
 
 }
