--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,45 +1,60 @@
 {
   "@@locale": "en",
-  "Continue": "Continue",
+  "acceptClause": "I accept the terms and conditions and privacy policy.",
+  "acceptEmailSend": "I agree to receive emails with discounts and news.",
   "Apply": "Apply",
+  "birthDate": "Date of birth",
+  "birthDateHover": "MM/DD/YYYY",
+  "checkWhatsapp": "Check your WhatsApp and copy the code",
+  "chooseYouSubscriptionType": "Choose Your Subscription Type",
+  "chooseYouSubscriptionTypeExplanation": "Select whether you want to purchase a monthly subscription for delivery work or for personal use as transportation and/or recreational use.",
+  "chooseYourMobi": "Choose Your Mobi",
+  "ci": "Identity card",
+  "codeSent": "Code Sent",
+  "codeSuccess": "Successful code",
+  "congratulations": "Congratulations, you successfully applied! The team from 'el genio x' will contact you in the next few hours.",
+  "Continue": "Continue",
+  "deliveryTime": "Your moped will arrive at your home in just 24 hours after your purchase confirmation.",
+  "email": "Email",
+  "enjoyYourMobiVehicle": "Enjoy Your Mobi Vehicle",
+  "extensionCi": "Extension",
+  "getSince800Dollars": "Earn from $800 per month by making deliveries on your moped, or simply enjoy your vehicle for convenient city transportation.",
+  "getYourMobiVehicle": "Receive Your Mobi Vehicle",
+  "hasLicense": "Do you have a motorcycle license?",
+  "howItWorks": "How it works?",
+  "includes": "Includes",
+  "jobMarketplace": "JOB MARKETPLACE",
+  "name": "Name",
+  "nameHover": "Juan Valdez Suarez",
+  "nameUser": "Name",
   "Next": "Next",
+  "no": "No",
+  "numberLicense": "Motorcycle license number",
+  "personalData": "PERSONAL DATA",
+  "phone": "Phone number",
+  "pickAnyOfOurVehicles": "You can choose any of our vehicles available for monthly subscription: electric scooters or mopeds.",
+  "register": "Register",
+  "registerWith": "Register with:",
+  "registerYourSelf": "Register",
+  "save": "Save",
+  "select": "Select",
+  "selectMobi": "SELECT YOUR MOBI",
+  "selectSubscription": "CHOOSE YOUR SUBSCRIPTION",
+  "sendCodeAgain": "Resend code",
   "step1": "STEP 1",
   "step2": "STEP 2",
   "step3": "STEP 3",
   "step4": "STEP 4",
   "step5": "STEP 5",
-  "chooseYourMobi": "Choose Your Mobi",
-  "pickAnyOfOurVehicles": "You can choose any of our vehicles available for monthly subscription: electric scooters or mopeds.",
-  "chooseYouSubscriptionType": "Choose Your Subscription Type",
-  "chooseYouSubscriptionTypeExplanation": "Select whether you want to purchase a monthly subscription for delivery work or for personal use as transportation and/or recreational use.",
-  "registerYourSelf": "Register",
-  "withOnlyFiveDays": "You can register with just 5 pieces of information to have your mobi vehicle delivered to your doorstep.",
-  "getYourMobiVehicle": "Receive Your Mobi Vehicle",
-  "youWillGetMopedIn24hrs": "Your moped will arrive at your doorstep within 24 hours of purchase confirmation.",
-  "enjoyYourMobiVehicle": "Enjoy Your Mobi Vehicle",
-  "getSince800Dollars": "Earn from $800 per month by making deliveries on your moped, or simply enjoy your vehicle for convenient city transportation.",
-  "test": "english",
+  "successApply": "SUCCESSFUL APPLICATION!",
   "support": "Support",
-  "no": "No",
-  "howItWorks": "How it works?",
-  "welcome": "WELCOME MOBIER!",
-  "name": "Name",
-  "email": "Email",
-  "phone": "Phone number",
-  "acceptClause": "I agree to the Terms, Conditions and Privacy Policy.",
-  "acceptEmailSend": "I would like to receive exclusive emails with discounts and news.",
-  "registerWith": "Register with:",
-  "verificationCode": "Verify your code",
-  "checkWhatsapp": "Check your whatsapp and paste the code",
-  "sendCodeAgain": "Resend the verification code",
-  "verify": "Verify",
-  "codeSuccess": "Success code",
-  "welcomeToMOBI": "WELCOME TO MOBI",
-  "codeSent": "Code sent",
+  "test": "english",
   "thisFieldIsMandatory": "This field is mandatory",
-  "selectMobi": "CHOOSE YOU MOBI",
-  "selectSubscription": "CHOOSE YOUR SUBSCRIPTION",
-  "include": "Includes",
-  "jobMarketplace": "Job Marketplace"
-
+  "verificationCode": "VERIFICATION CODE",
+  "verify": "Verify",
+  "welcome": "WELCOME MOBIER!",
+  "welcomeToMOBI": "WELCOME TO MOBI",
+  "withOnlyFiveDays": "You can register with just 5 pieces of information to have your mobi vehicle delivered to your doorstep.",
+  "yes": "Yes",
+  "youWillGetMopedIn24hrs": "Your moped will arrive at your doorstep within 24 hours of purchase confirmation."
 }
