--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -1,46 +1,60 @@
 {
   "@@locale": "es",
-  "Continue": "Continuar",
+  "acceptClause": "Acepto términos y condiciones y política de privacidad.",
+  "acceptEmailSend": "Acepto recibir correos electrónicos con descuentos y novedades.",
   "Apply": "Aplicar",
+  "birthDate": "Fecha de nacimiento",
+  "birthDateHover": "DD/MM/AAAA",
+  "checkWhatsapp": "Revisa tu whatsapp y copia el código",
+  "chooseYouSubscriptionType": "Selecciona tu tipo de suscripción",
+  "chooseYouSubscriptionTypeExplanation": "Elige si quieres adquirir tu suscripción mensual \npara trabajar realizando envíos o para uso personal como transporte y/o uso recreativo.",
+  "chooseYourMobi": "Slecciona tu Mobi",
+  "ci": "Carnet de identidad",
+  "codeSent": "Código Enviado",
+  "codeSuccess": "Código exitoso",
+  "congratulations": "Felicidades aplicaste exitosamente el equipo de el genio x se contactará contigo en las próximas horas",
+  "Continue": "Continuar",
+  "deliveryTime": "Tu moped llegará a tu domicilio en tan solo 24 Hrs. a partir de la confirmación de tu compra.",
+  "email": "Correo electrónico",
+  "enjoyYourMobiVehicle": "Disfruta de tu vehículo mobi",
+  "extensionCi": "Extensión",
+  "getSince800Dollars": "Recibe desde 800 US$ mensuales realizando envíos en tu moped, o simplemente disfruta de tu vehículo para moverte libremente por la ciudad.",
+  "getYourMobiVehicle": "Recibe tu vehículo mobi",
+  "hasLicense": "¿Tiene licencia de moto?",
+  "howItWorks": "¿Cómo funciona?",
+  "includes": "Incluye",
+  "jobMarketplace": "JOB MARKETPLACE",
+  "name": "Nombre",
+  "nameHover": "Juan Valdez Suarez",
+  "nameUser": "Nombre",
   "Next": "Siguiente",
+  "no": "No",
+  "numberLicense": "Número de licencia de moto",
+  "personalData": "DATOS PERSONALES",
+  "phone": "Número de celular",
+  "pickAnyOfOurVehicles": "Puedes seleccionar cualquiera de nuestros vehículos habilitados para suscripción mensual: scooters o mopeds eléctricas.",
+  "register": "Registrar",
+  "registerWith": "Registrate con:",
+  "registerYourSelf": "Registrate",
+  "save": "Guardar",
+  "select": "Selecciona",
+  "selectMobi": "SELECCIONA TU MOBI",
+  "selectSubscription": "SELECCIONA TU SUSCRIPCIÓN",
+  "sendCodeAgain": "Volver a enviar código",
   "step1": "PASO 1",
   "step2": "PASO 2",
   "step3": "PASO 3",
   "step4": "PASO 4",
   "step5": "PASO 5",
-  "chooseYourMobi": "Slecciona tu Mobi",
-  "pickAnyOfOurVehicles": "Puedes seleccionar cualquiera de nuestros vehículos habilitados para suscripción mensual: scooters o mopeds eléctricas.",
-  "chooseYouSubscriptionType": "Selecciona tu tipo de suscripción",
-  "chooseYouSubscriptionTypeExplanation": "Elige si quieres adquirir tu suscripción mensual \npara trabajar realizando envíos o para uso personal como transporte y/o uso recreativo.",
-  "registerYourSelf": "Registrate",
-  "withOnlyFiveDays": "Con tan solo 5 datos puedes registrarte para adquirir tu vehículo mobi en la puerta de tu casa.",
-  "getYourMobiVehicle": "Recibe tu vehículo mobi",
-  "youWillGetMopedIn24hrs": "Tu moped llegara a tu domicilio en tan solo 24 Hrs. a partir de la confirmación de tu compra.",
-  "enjoyYourMobiVehicle": "Disfruta de tu vehículo mobi",
-  "getSince800Dollars": "Recibe desde 800 US$ mensuales realizando envíos en tu moped, o simplemente disfruta de tu vehículo para moverte libremente por la ciudad.",
-  "test": "español",
+  "successApply": "APLICACIÓN EXITOSA!",
   "support": "Soporte",
-  "no": "No",
-  "howItWorks": "¿Cómo funciona?",
-  "welcome": "BIENVENIDO MOBIER!",
-  "name": "Nombre",
-  "email": "Correo electrónico",
-  "phone": "Número de celular",
-  "acceptClause": "Acepto términos y condiciones y política de privacidad.",
-  "acceptEmailSend": "Acepto recibir correos electrónicos con descuentos y novedades.",
-  "registerWith": "Registrate con:",
-  "verificationCode": "CÓDIGO DE VERIFICACIÓN",
-  "checkWhatsapp": "Revisa tu whatsapp y copia el código",
-  "sendCodeAgain": "Volver a enviar código",
-  "register": "Registrar",
-  "verify": "Verificar",
-  "codeSuccess": "Código exitoso",
-  "welcomeToMOBI": "BIENVENIDO A MOBI",
-  "codeSent": "Código Enviado",
+  "test": "español",
   "thisFieldIsMandatory": "Este campo es obligatorio",
-  "selectMobi": "SELECCIONA TU MOBI",
-  "selectSubscription": "SELECCIONA TU SUSCRIPCIÓN",
-  "includes": "Incluye",
-  "jobMarketplace": "Job Marketplace"
-
+  "verificationCode": "CÓDIGO DE VERIFICACIÓN",
+  "verify": "Verificar",
+  "welcome": "BIENVENIDO MOBIER!",
+  "welcomeToMOBI": "BIENVENIDO A MOBI",
+  "withOnlyFiveDays": "Con tan solo 5 datos puedes registrarte para adquirir tu vehículo mobi en la puerta de tu casa.",
+  "yes": "Si",
+  "youWillGetMopedIn24hrs": "Tu moped llegara a tu domicilio en tan solo 24 Hrs. a partir de la confirmación de tu compra."
 }
