[FEATURE] menu labels

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -81,9 +81,43 @@
   "howDrive": "How to drive?",
   "openAppAndTurnOnMoped": "Open the App and turn on your moped",
   "openAppAndTurnOnScooter": "Open the App and turn on your scooter",
-  "mopedIntructions": "From the App you can view all the widgets necessary to locate what your moped needs, from maintenance, battery level, support, etc. ",
-  "scooterIntrucions": "From the App you can view all the widgets necessary to locate what your moped needs, from maintenance, battery level, support, etc. ",
+  "mopedInstructions": "From the App you can view all the widgets necessary to locate what your moped needs, from maintenance, battery level, support, etc. ",
+  "scooterInstructions": "From the App you can view all the widgets necessary to locate what your moped needs, from maintenance, battery level, support, etc. ",
   "activeMoped": "ACTIVE MOPED",
   "scanQR": "Scan QR",
-  "scanQRCode": "Scan the moped QR code to activate your moped and start your trips"
+  "scanQRCode": "Scan the moped QR code to activate your moped and start your trips",
+  "serialNumber": "Serial Number",
+  "batterySerialNumber": "Battery Serial Number",
+  "batteryLevel": "Battery Level",
+  "kmTraveled": "Km. Traveled",
+  "nextMaintaining": "Next Maintenance",
+  "profile": "Profile",
+  "myMoped": "My Moped",
+  "billAndPayments": "Billing and Payments",
+  "sendEmail": "Send us an email",
+  "talkUs": "Talk to us",
+  "referredDiscount": "Referred Discount",
+  "referredCode": "Referral Code",
+  "referredDescription": "Receive a 10% discount on your next installment by sharing this code with your friends",
+  "referredSmallText": "The discount will be applied when your friend starts working with mobi.",
+  "mopedNameBike": "Ciber Bike One (CK1)",
+  "mopedBikeDescription": "Ciber Bike One, The first electric motorcycle with IoT technology in the Latin American region. The vehicle can be controlled through a technological platform; designed, developed, manufactured in Bolivia that uses Bolivian lithium batteries.",
+  "paymentHistory": "Payment History",
+  "totalPayment": "Total Payment",
+  "billing": "Billing",
+  "billingHistory": "Billing History",
+  "working": "Trabajo",
+  "userEmail": "juan.valdez@gmail.com",
+  "language": "Language",
+  "legalDocuments": "Legal Documents",
+  "newsAndDiscounts": "News and Discounts via email",
+  "deleteAccount": "Delete Account",
+  "saveChanges": "Save Changes",
+  "termsAndConditions": "Terms and Conditions",
+  "privacyPolicy": "Privacy Policy",
+  "english": "Inglés",
+  "spanish": "Español",
+  "portuguese": "Portugués",
+  "userLastName": "Valdez Suarez",
+  "closeSession": "Close Session"
 }
