--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -58,7 +58,7 @@
   "yes": "Si",
   "youWillGetMopedIn24hrs": "Tu moped llegara a tu domicilio en tan solo 24 Hrs. a partir de la confirmación de tu compra.",
 
-  "paySubscription": "PAGAR SUSCRIPCIÓN",
+  "paySubscription": "Pagar suscripción",
   "cardNumber": "Número de tarjeta",
   "securityCode": "Código de seguridad (VCC)",
   "expirationDate": "Fecha de vencimiento",
@@ -82,9 +82,43 @@
   "howDrive": "¿Cómo conducir?",
   "openAppAndTurnOnMoped": "Abre la App y enciende la moped",
   "openAppAndTurnOnScooter": "Abre la App y enciende tu scooter",
-  "mopedIntructions": "Desde la App podrás visualizar todos los widgets necesarios para localizar que necesita tu moped, desde mantenimientos, nivel de baterías, soporte,etc.",
-  "scooterIntrucions": "Desde la App podrás visualizar todos los widgets necesarios para localizar que necesita tu scooter, desde mantenimientos, nivel de baterías, soporte,etc.",
+  "mopedInstructions": "Desde la App podrás visualizar todos los widgets necesarios para localizar que necesita tu moped, desde mantenimientos, nivel de baterías, soporte,etc.",
+  "scooterInstructions": "Desde la App podrás visualizar todos los widgets necesarios para localizar que necesita tu scooter, desde mantenimientos, nivel de baterías, soporte,etc.",
   "activeMoped": "ACTIVAR MOPED",
   "scanQR": "Escanear QR",
-  "scanQRCode": "Escanear el codigo QR de la moped para activar tu moped y comenzar tus viajes"
+  "scanQRCode": "Escanear el codigo QR de la moped para activar tu moped y comenzar tus viajes",
+  "serialNumber": "Nro. de serie",
+  "batterySerialNumber": "Nro. de serie de batería",
+  "batteryLevel": "Nivel de batería",
+  "kmTraveled": "Km. recorridos",
+  "nextMaintaining": "Próximo mantenimiento",
+  "profile": "Perfil",
+  "myMoped": "Mi Moped",
+  "billAndPayments": "Facturación y pagos",
+  "sendEmail": "Envíanos un email",
+  "talkUs": "Habla con nosotros",
+  "referredDiscount": "Descuento referido",
+  "referredCode": "Código referido",
+  "referredDescription": "Recibe descuento de 10% en tu próxima cuota compartiendo este código con tus amigos",
+  "referredSmallText": "El descuento será aplicado cuando tu amigo comience a trabajar con mobi.",
+  "mopedNameBike": "Ciber Bike One (CK1)",
+  "mopedBikeDescription": "Ciber Bike One, La primera motocicleta eléctrica con tecnología de IoT en la región de América Latina. El vehículo puede ser controlado mediante una plataforma tecnológica; diseñada, desarrollada, fabricada en Bolivia que utiliza baterías de litio bolivianas.",
+  "paymentHistory": "Historial de pagos",
+  "totalPayment": "Total a pagar",
+  "billing": "Facturación",
+  "billingHistory": "Historial de facturación",
+  "working": "Trabajo",
+  "userEmail": "juan.valdez@gmail.com",
+  "language": "Idioma",
+  "legalDocuments": "Documentos legales",
+  "newsAndDiscounts": "Noticias y descuentos vía email",
+  "deleteAccount": "Borrar cuenta",
+  "saveChanges": "Guardar cambios",
+  "termsAndConditions": "Términos y condiciones",
+  "privacyPolicy": "Políticas de privacidad",
+  "english": "Inglés",
+  "spanish": "Español",
+  "portuguese": "Portugués",
+  "userLastName": "Valdez Suarez",
+  "closeSession": "Cerrar sesión"
 }
