--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -138,5 +138,11 @@
   "noDeviceFind": "No device is connected",
   "noServiceFind": "Service not found",
   "qrError": "Invalid QR code",
-  "deleteData": "Delete data"
+  "deleteData": "Delete data",
+  "sendTimeoutException": "The request timed out. Please check your internet connection and try again.",
+  "badResponse": "There was a problem processing your request. Please try again or contact support.",
+  "fetchDataException": "Unable to retrieve response from the server. Please check your internet connection and try again.",
+  "serializationException": "There was an error processing data received from the server.",
+  "unrecognizedException": "An unknown error has occurred."
+
 }
