--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -139,5 +139,10 @@
   "noDeviceFind": "No hay ningún dispositivo conectado",
   "noServiceFind": "Servicio no encontrado",
   "qrError": "Código QR no válido",
-  "deleteData": "Borrar datos"
+  "deleteData": "Borrar datos",
+  "sendTimeoutException": "Se excedió el tiempo de espera de la solicitud. Verifica tu conexión a internet e inténtalo de nuevo.",
+  "badResponse": "Ocurrió un problema al procesar tu solicitud. Vuelve a intentarlo o contacta con soporte.",
+  "fetchDataException": "No se pudo obtener la respuesta del servidor. Verifica tu conexión a internet e inténtalo de nuevo.",
+  "serializationException": "Hubo un error al procesar los datos recibidos del servidor.",
+  "unrecognizedException": "Se ha producido un error desconocido."
 }
