add question, reserve

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -153,5 +153,7 @@
   "lowVelocity": "Low",
   "mediumVelocity": "Medium",
   "highVelocity": "High",
-  "lightButton": "Lights"
+  "lightButton": "Lights",
+  "reserve": "Reserve",
+  "frequentQuestions": "Frequent Questions"
 }
